--- a/resources/pod-build-container.yaml
+++ b/resources/pod-build-container.yaml
@@ -13,6 +13,14 @@ spec:
     volumeMounts:
     - name: workspace-volume
       mountPath: /home/jenkins/agent
+  - name: docker
+    image: docker:latest
+    command:
+    - cat
+    tty: true
+    volumeMounts:
+    - name: workspace-volume
+      mountPath: /home/jenkins/agent
   volumes:
   - name: workspace-volume
     emptyDir: {}
