--- a/resources/pod-build-container.yaml
+++ b/resources/pod-build-container.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   containers:
   - name: docker
-    image: docker:20.10.7-dind
+    image: docker:24.0.5
     command:
     - cat
     securityContext:
