--- a/resources/pod-build-container.yaml
+++ b/resources/pod-build-container.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   containers:
   - name: docker
-    image: docker:24.0.5
+    image: python:3.13-rc-bookworm⁠
     command:
     - cat
     securityContext:
