--- a/resources/pod-build-container.yaml
+++ b/resources/pod-build-container.yaml
@@ -12,6 +12,13 @@ spec:
     securityContext:
       privileged: true
     tty: true
+  - name: kubectl
+    image: bitnami/kubectl:latest
+    command:
+    - cat
+    securityContext:
+      privileged: true
+    tty: true
     # volumeMounts:
     # - name: workspace-volume
     #   mountPath: /home/jenkins/agent
