add kubectl container

--- a/resources/pod-build-container.yaml
+++ b/resources/pod-build-container.yaml
@@ -14,7 +14,7 @@ spec:
       privileged: true
     tty: true
   - name: kubectl
-    image: bitnami/kubectl:latest
+    image: lachlanevenson/k8s-kubectl:latest
     command:
     - cat
     securityContext:
