--- a/resources/pod-build-container.yaml
+++ b/resources/pod-build-container.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
   - name: docker
-    image: python:slim-bookworm
+    image: wizzzuveye/docker-python-demo
     command:
     - cat
     securityContext:
