--- a/resources/pod-build-container.yaml
+++ b/resources/pod-build-container.yaml
@@ -6,27 +6,47 @@ metadata:
     jenkins/label: jenkins-wizzz-jenkins-agent
 spec:
   containers:
+  - name: docker-daemon
+    image: docker:20.10-dind
+    securityContext:
+      privileged: true
+    env:
+    - name: DOCKER_TLS_CERTDIR
+      value: ""
+    resources:
+      requests:
+        memory: "6Gi"
+        cpu: "4000m"
+    volumeMounts:
+    - name: docker-graph-storage
+      mountPath: /var/lib/docker
+
   - name: docker
     image: wizzzuveye/docker-python-demo
     command:
     - cat
+    tty: true
+    env:
+    - name: DOCKER_HOST
+      value: "tcp://localhost:2375"
     securityContext:
       privileged: true
-    tty: true
     resources:
       requests:
-        memory: "6Gi"  # Minimum memory this container is guaranteed
-        cpu: "4000m"   # Minimum CPU this container is guaranteed (1000m = 1 CPU core)
+        memory: "6Gi"
+        cpu: "4000m"
+    volumeMounts:
+    - name: docker-graph-storage
+      mountPath: /var/lib/docker
+
   - name: kubectl
     image: lachlanevenson/k8s-kubectl:latest
     command:
     - cat
+    tty: true
     securityContext:
       privileged: true
-    tty: true
-    # volumeMounts:
-    # - name: workspace-volume
-    #   mountPath: /home/jenkins/agent
-  # volumes:
-  # - name: workspace-volume
-  #   emptyDir: {}
+
+  volumes:
+  - name: docker-graph-storage
+    emptyDir: {}
